--- a/code.ipynb
+++ b/code.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BIG DATA PROJECT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -46,6 +60,13 @@
     "df_descr = pd.read_csv('data_descriptives.csv')\n",
     "df_conv = pd.read_csv('data_conversations.csv')\n",
     "df_meta = pd.read_csv('data_metadata.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Start clean"
    ]
   },
   {
@@ -1699,7 +1720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Neural network baseline"
+    "## Neural network baseline"
    ]
   },
   {
@@ -1984,7 +2005,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Better CNN"
+    "### Better CNN"
    ]
   },
   {
@@ -2264,63 +2285,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 114,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1432 entries, 0 to 1431\n",
-      "Data columns (total 37 columns):\n",
-      " #   Column                        Non-Null Count  Dtype  \n",
-      "---  ------                        --------------  -----  \n",
-      " 0   weight                        1432 non-null   float64\n",
-      " 1   gender                        1432 non-null   int64  \n",
-      " 2   height                        1432 non-null   int64  \n",
-      " 3   age                           1432 non-null   int64  \n",
-      " 4   bmi                           1432 non-null   float64\n",
-      " 5   country_of_birth              1432 non-null   int64  \n",
-      " 6   current_country_of_residence  1432 non-null   int64  \n",
-      " 7   average_daily_step_count      1432 non-null   int64  \n",
-      " 8   average_sleep_duration        1432 non-null   float64\n",
-      " 9   resting_heart_rate            1432 non-null   int64  \n",
-      " 10  heart_rate_variability        1432 non-null   float64\n",
-      " 11  average_blood_pressure        1432 non-null   int64  \n",
-      " 12  average_blood_glucose         1432 non-null   int64  \n",
-      " 13  average_fasting_glucose       1432 non-null   float64\n",
-      " 14  diet_type                     1432 non-null   int64  \n",
-      " 15  specific_preferences          1432 non-null   int64  \n",
-      " 16  challenges                    1432 non-null   int64  \n",
-      " 17  mother                        1432 non-null   int64  \n",
-      " 18  father                        1432 non-null   int64  \n",
-      " 19  ethnicity                     1432 non-null   int64  \n",
-      " 20  current_city_of_residence     1432 non-null   int64  \n",
-      " 21  id                            1432 non-null   int64  \n",
-      " 22  state_name                    1432 non-null   int64  \n",
-      " 23  state_code                    1432 non-null   int64  \n",
-      " 24  housing_type                  1432 non-null   int64  \n",
-      " 25  housing_tenure                1432 non-null   int64  \n",
-      " 26  marital_status                1432 non-null   int64  \n",
-      " 27  has_children                  1432 non-null   int64  \n",
-      " 28  number_of_children            1432 non-null   float64\n",
-      " 29  living_alone                  1432 non-null   bool   \n",
-      " 30  sexual_orientation            1432 non-null   int64  \n",
-      " 31  alcohol_consumption           1432 non-null   float64\n",
-      " 32  stress_level                  1432 non-null   float64\n",
-      " 33  screen_time_per_day           1432 non-null   float64\n",
-      " 34  physical_activity             1432 non-null   float64\n",
-      " 35  smoking_status                1432 non-null   int64  \n",
-      " 36  has_diabetes                  1432 non-null   bool   \n",
-      "dtypes: bool(2), float64(10), int64(25)\n",
-      "memory usage: 394.5 KB\n"
-     ]
-    }
-   ],
    "source": [
-    "df_descr_syn.info()\n"
+    "### Adding new columns"
    ]
   },
   {
@@ -2669,7 +2637,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try model again"
+    "## Models on improved data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RandomForest"
    ]
   },
   {
@@ -2901,7 +2876,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CNN with new data"
+    "### CNN with new data"
    ]
   },
   {
